--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + Vue + Typescript App</title>
+    <script>
+      if (window.isTauri) {
+        const script = document.createElement('script');
+        script.src = 'http://localhost:8098';
+        document.head.appendChild(script);
+      }
+    </script>
+    <title>Raven App</title>
   </head>
 
   <body>
