--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           }
 
           .splash-title {
+            display: none;
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
             font-size: 32px;
             font-weight: 600;
