--- a/index.html
+++ b/index.html
@@ -46,31 +46,43 @@
 
           .splash-spinner {
             position: relative;
-            width: 48px;
-            height: 48px;
+            width: 32px;
+            height: 32px;
             margin: 0 auto;
+            display: flex;
           }
 
           .splash-spinner-ring {
             position: absolute;
             width: 100%;
             height: 100%;
-            border: 3px solid rgba(102, 126, 234, 0.2);
-            border-top-color: #667eea;
             border-radius: 50%;
-            animation: spin 0.8s linear infinite;
+          }
+
+          .splash-spinner-ring:nth-child(1) {
+            border: 5px solid #667eea;
+            border-top-color: transparent;
+            border-right-color: transparent;
+            border-left-color: transparent;
+            border-style: solid;
+            animation: spinner-spin 0.8s infinite;
           }
 
           .splash-spinner-ring:nth-child(2) {
-            width: 70%;
-            height: 70%;
-            top: 15%;
-            left: 15%;
-            animation: spin 1.2s linear infinite reverse;
+            border: 5px solid #667eea;
+            border-top-color: transparent;
+            border-right-color: transparent;
+            border-left-color: transparent;
+            border-style: dotted;
+            opacity: 0.75;
+            animation: spinner-spin 0.8s linear infinite;
           }
 
-          @keyframes spin {
-            to {
+          @keyframes spinner-spin {
+            0% {
+              transform: rotate(0);
+            }
+            100% {
               transform: rotate(360deg);
             }
           }
