refactor: Update splash spinner color from purple to green

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           }
 
           .splash-spinner-ring:nth-child(1) {
-            border: 5px solid #667eea;
+            border: 5px solid #00c16a;
             border-top-color: transparent;
             border-right-color: transparent;
             border-left-color: transparent;
@@ -69,7 +69,7 @@
           }
 
           .splash-spinner-ring:nth-child(2) {
-            border: 5px solid #667eea;
+            border: 5px solid #00c16a;
             border-top-color: transparent;
             border-right-color: transparent;
             border-left-color: transparent;
