--- a/index.html
+++ b/index.html
@@ -4,321 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="module" src="/src/web-components/SplashLoader.ts"></script>
     <script>
       if (window.isTauri) {
         const script = document.createElement('script');
         script.src = 'http://localhost:8098';
         document.head.appendChild(script);
       }
-    </script>
-    <script type="module">
-      import {LitElement, html, css} from 'lit';
-
-      class SplashLoader extends LitElement {
-        static styles = css`
-          :host {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-            background: #080c14;
-            overflow: hidden;
-          }
-
-          canvas {
-            position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            pointer-events: none;
-          }
-
-          .splash-content {
-            position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 32px;
-            z-index: 1;
-          }
-
-          .splash-logo-wrap {
-            position: relative;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-
-          .splash-glow-ring {
-            position: absolute;
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            background: radial-gradient(circle, rgba(0,193,106,0.18) 0%, transparent 70%);
-            animation: glow-pulse 2.4s ease-in-out infinite;
-          }
-
-          .splash-orbit {
-            position: relative;
-            width: 80px;
-            height: 80px;
-          }
-
-          .splash-orbit-ring {
-            box-sizing: border-box;
-            position: absolute;
-            border-radius: 50%;
-            border: 1.5px solid transparent;
-          }
-
-          .splash-orbit-ring:nth-child(1) {
-            width: 100%; height: 100%;
-            top: 0; left: 0;
-            border-top-color: #00e676;
-            border-right-color: rgba(0,230,118,0.3);
-            animation: orbit-spin 1.8s linear infinite;
-            filter: drop-shadow(0 0 4px #00e676);
-          }
-
-          .splash-orbit-ring:nth-child(2) {
-            width: 72%; height: 72%;
-            top: 14%; left: 14%;
-            border-bottom-color: #00c16a;
-            border-left-color: rgba(0,193,106,0.3);
-            animation: orbit-spin 1.2s linear infinite reverse;
-            filter: drop-shadow(0 0 3px #00c16a);
-          }
-
-          .splash-orbit-ring:nth-child(3) {
-            width: 44%; height: 44%;
-            top: 28%; left: 28%;
-            border-top-color: #69f0ae;
-            border-right-color: rgba(105,240,174,0.3);
-            animation: orbit-spin 0.9s linear infinite;
-            filter: drop-shadow(0 0 2px #69f0ae);
-          }
-
-          .splash-orbit-dot {
-            position: absolute;
-            width: 5px; height: 5px;
-            border-radius: 50%;
-            background: #00e676;
-            top: -2.5px; left: calc(50% - 2.5px);
-            box-shadow: 0 0 8px 2px #00e676;
-            animation: orbit-spin 1.8s linear infinite;
-            transform-origin: 2.5px calc(40px + 2.5px);
-          }
-
-          .splash-title-wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 6px;
-            animation: fadeInUp 0.9s cubic-bezier(0.22, 1, 0.36, 1) both;
-            animation-delay: 0.2s;
-          }
-
-          .splash-title {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            font-size: 52px;
-            font-weight: 800;
-            line-height: 1.15;
-            padding: 2px 10px;
-            letter-spacing: 6px;
-            text-transform: uppercase;
-            background: linear-gradient(90deg, #00c16a 0%, #00e676 40%, #69f0ae 70%, #00c16a 100%);
-            background-size: 200% auto;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            animation: shimmer 3s linear infinite, fadeInUp 0.9s cubic-bezier(0.22, 1, 0.36, 1) both;
-            animation-delay: 0s, 0.2s;
-          }
-
-          .splash-subtitle {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            font-size: 11px;
-            font-weight: 500;
-            letter-spacing: 4px;
-            text-transform: uppercase;
-            color: rgba(105, 240, 174, 0.5);
-            animation: fadeInUp 0.9s cubic-bezier(0.22, 1, 0.36, 1) both;
-            animation-delay: 0.4s;
-          }
-
-          .splash-progress-wrap {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 8px;
-            animation: fadeInUp 0.9s cubic-bezier(0.22, 1, 0.36, 1) both;
-            animation-delay: 0.5s;
-          }
-
-          .splash-progress-bar {
-            width: 160px;
-            height: 2px;
-            background: rgba(255,255,255,0.06);
-            border-radius: 2px;
-            overflow: hidden;
-          }
-
-          .splash-progress-fill {
-            height: 100%;
-            width: 40%;
-            background: linear-gradient(90deg, transparent, #00e676, #69f0ae, transparent);
-            border-radius: 2px;
-            animation: progress-scan 1.6s ease-in-out infinite;
-          }
-
-          .splash-status {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-            font-size: 10px;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            color: rgba(105, 240, 174, 0.35);
-          }
-
-          @keyframes orbit-spin {
-            to { transform: rotate(360deg); }
-          }
-
-          @keyframes glow-pulse {
-            0%, 100% { transform: scale(1); opacity: 0.8; }
-            50% { transform: scale(1.3); opacity: 0.4; }
-          }
-
-          @keyframes shimmer {
-            to { background-position: 200% center; }
-          }
-
-          @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(16px); }
-            to { opacity: 1; transform: translateY(0); }
-          }
-
-          @keyframes progress-scan {
-            0% { transform: translateX(-100%); }
-            100% { transform: translateX(500%); }
-          }
-
-          :host([fade-out]) {
-            animation: fadeOut 0.5s cubic-bezier(0.4, 0, 1, 1) forwards;
-          }
-
-          @keyframes fadeOut {
-            to {
-              opacity: 0;
-              pointer-events: none;
-              transform: scale(1.03);
-            }
-          }
-        `;
-
-        static properties = {
-          fadeOut: { type: Boolean, reflect: true, attribute: 'fade-out' }
-        };
-
-        firstUpdated() {
-          this._initParticles();
-        }
-
-        _initParticles() {
-          const canvas = this.renderRoot.querySelector('canvas');
-          if (!canvas) return;
-          const ctx = canvas.getContext('2d');
-          const dpr = window.devicePixelRatio || 1;
-
-          const resize = () => {
-            canvas.width = canvas.offsetWidth * dpr;
-            canvas.height = canvas.offsetHeight * dpr;
-            ctx.scale(dpr, dpr);
-          };
-          resize();
-
-          const W = () => canvas.offsetWidth;
-          const H = () => canvas.offsetHeight;
-
-          const count = 55;
-          const particles = Array.from({ length: count }, () => ({
-            x: Math.random() * W(),
-            y: Math.random() * H(),
-            r: Math.random() * 1.2 + 0.3,
-            vx: (Math.random() - 0.5) * 0.25,
-            vy: (Math.random() - 0.5) * 0.25,
-            alpha: Math.random() * 0.4 + 0.1,
-          }));
-
-          const draw = () => {
-            ctx.clearRect(0, 0, W(), H());
-            for (const p of particles) {
-              p.x += p.vx;
-              p.y += p.vy;
-              if (p.x < 0) p.x = W();
-              if (p.x > W()) p.x = 0;
-              if (p.y < 0) p.y = H();
-              if (p.y > H()) p.y = 0;
-
-              ctx.beginPath();
-              ctx.arc(p.x, p.y, p.r, 0, Math.PI * 2);
-              ctx.fillStyle = `rgba(0, 230, 118, ${p.alpha})`;
-              ctx.fill();
-            }
-
-            for (let i = 0; i < particles.length; i++) {
-              for (let j = i + 1; j < particles.length; j++) {
-                const dx = particles[i].x - particles[j].x;
-                const dy = particles[i].y - particles[j].y;
-                const dist = Math.sqrt(dx * dx + dy * dy);
-                if (dist < 90) {
-                  ctx.beginPath();
-                  ctx.moveTo(particles[i].x, particles[i].y);
-                  ctx.lineTo(particles[j].x, particles[j].y);
-                  ctx.strokeStyle = `rgba(0, 193, 106, ${0.12 * (1 - dist / 90)})`;
-                  ctx.lineWidth = 0.5;
-                  ctx.stroke();
-                }
-              }
-            }
-
-            requestAnimationFrame(draw);
-          };
-          draw();
-        }
-
-        render() {
-          return html`
-            <canvas></canvas>
-            <div class="splash-content">
-              <div class="splash-logo-wrap">
-                <div class="splash-glow-ring"></div>
-                <div class="splash-orbit">
-                  <div class="splash-orbit-ring"></div>
-                  <div class="splash-orbit-ring"></div>
-                  <div class="splash-orbit-ring"></div>
-                  <div class="splash-orbit-dot"></div>
-                </div>
-              </div>
-              <div class="splash-title-wrap">
-                <div class="splash-title">Raven</div>
-                <div class="splash-subtitle">AI Agent Platform</div>
-              </div>
-              <div class="splash-progress-wrap">
-                <div class="splash-progress-bar">
-                  <div class="splash-progress-fill"></div>
-                </div>
-                <div class="splash-status">Initializing</div>
-              </div>
-            </div>
-          `;
-        }
-      }
-
-      customElements.define('splash-loader', SplashLoader);
     </script>
     <title>Raven App</title>
   </head>
